# hackthecrisisswe-covid19

./: .env  .gitattributes  .gitmodules  .~lock.presentation.odp#  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  makefile  presentation.odp
.github/: FUNDING.yml
api/: Cargo.toml  Rocket.toml
api/migrations/00000000000000_diesel_initial_setup/: up.sql
api/migrations/2020-04-03-220902_create_base_table/: down.sql  up.sql
api/migrations/2020-04-03-221118_create_ref_tables/: down.sql  up.sql
api/migrations/2020-04-03-221315_create_value_tables/: down.sql  up.sql
api/migrations/2020-04-04-212656_mock_data/: down.sql  up.sql
api/migrations/2020-04-09-182103_areas/: down.sql  up.sql
api/src/: apihelper.rs  auth.rs  cors_fairing.rs  db.rs  db_models.rs  main.rs  redis.rs  schema.rs  sql_types.rs  view_models.rs
api/src/geoencoding/: mod.rs
api/src/login/: mod.rs
api/src/transaction/: mod.rs
config/: db.env  haproxy.env  pgadmin4.env  redis-commander.env  redis.env
db/: 00001.sql
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.css  App.js  index.js
ui/src/components/: AppBarComponent.jsx  MapComponent.jsx  MenuComponent.jsx  RequestListComponent.jsx
ui/src/data/: fa_region.json  komun.json  lan.geojson  license.md
ui/src/epics/: GeoEpic.js  LoginEpic.js  TransactionEpic.js
ui/src/models/: references.js
ui/src/service/: transactionService.js
ui/src/utils/: Request.js  RxJs.js
