[package]
name = "api"
version = "0.1.0"
authors = ["Mattias Festin <mail@mattiasfest.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
jwt = "0.4.0"
scrypt = "0.2.0"
envmnt = "0.8.1"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuid", "r2d2"] }
redis = "0.15.1"
dotenv = "0.15.0"
geo = "0.13.0"
rocket_contrib = { version = "0.4.4", features = ["uuid"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.50"
reqwest = { version ="0.10.4", features = ["blocking", "json"] }